--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
-version = '2.2'
+targetCompatibility = 1.8
+version = '2.3'
+group = "com.negafinity"
+archivesBaseName = "Iron-Hawk"
+
 jar {
     manifest {
         attributes 'Implementation-Title': 'Iron-Hawk',
