--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+version = '1.0'
 group = "com.negafinity"
 archivesBaseName = "Iron-Hawk"
 
